Update - Change from Python 2.x to Python 3.x First release including the config parser and rsyslog functionality. Unsure if working. ;)

--- a/fake200.cfg
+++ b/fake200.cfg
@@ -1,5 +1,4 @@
-[fake200]
-
+[webserver]
 ;;;;;;;;;;;;;;;;;;;
 ; server settings ;
 ;;;;;;;;;;;;;;;;;;;
@@ -8,21 +7,28 @@
 bind = 127.0.0.1
 
 ; The port we are responding on
-port = 8001
+port = 8443
 
+; The used ssl cert file
+certfile = server.pem
+
+[logging]
 ;;;;;;;;;;;
 ; logging ;
 ;;;;;;;;;;;
 
-; If you want to use a remote syslog server, enter the correct IP and UDP Port
-syslog_server = 127.0.0.1
+; If you want to use a remote syslog server, enter the correct IP and Port
+syslog_server = 10.0.2.15
 syslog_port = 514
+syslog_name = fake200
+# Allowed values are: TCP UDP
+syslog_type = UDP
 
 ; the facility which we are using
-facility = user
+syslog_facility = LOG_USER
 
 ; the implemented priorities are:
 ; alert crit debug err info warn
 ; to use them, simply concatenate them using comma in between
 ; priorities = debug,crit
-priorities = debug
+syslog_level = debug
